# Sky_Blue_EQ4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resource/: SBEQ4_editor.uidesc  au-info.plist  win32resource.aps  win32resource.rc
source/: SBEQ4_cids.h  SBEQ4_controller.cpp  SBEQ4_controller.h  SBEQ4_entry.cpp  SBEQ4_processor.cpp  SBEQ4_processor.h  version.h
